--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class="m-0 p-0">Einfach anrufen. <a href="https://youtu.be/oHg5SJYRHA0">+49 1511 1234567</a></h3>
+                <h3 class="m-0 p-0">Infos<br><a href="https://youtu.be/oHg5SJYRHA0">Diese Webseite dient nicht zur Öffentlichen nutzung.</a></h3>
               </div>
             </div>
           </div>
@@ -362,9 +362,9 @@
                       <address>JW7M+46G, Tabelot, Niger</address>
                     </div>
                     <div class="col-md-6">
-                      <h3>Telephone</h3>
+                      <h3>Infos</h3>
                       <p>
-                       <a href="#">+49 1511 1234567</a> <br>
+                       
                        <a href="#">+49 1511 1234567</a>
                       </p>
                     </div>
